# group1-spring2024

./: .breakpoints  .gitignore  .pylintrc  README.md  backend.py  cache.py  env  pyproject.toml  replit.nix  replit_zip_error_log (1).txt  replit_zip_error_log (2).txt  replit_zip_error_log (3).txt  replit_zip_error_log.txt  requirements.txt  superuserceredentials.txt  weather_cache.sqlite
.upm/: store.json
django_project/: settings.py  urls.py
weather_app/: .models.py.1481659897~  admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
weather_app/app_tests/: __init__.py  test_color_outfit.py  test_decorators.py  test_location_form.py  test_login.py  test_temp_outfit.py  test_temp_outfit_per.py  test_utils.py  test_weather.py  test_weather_outfit.py  utils.py
weather_app/fixtures/: fixture_generic_clothes.json
weather_app/migrations/: 0001_initial.py  0002_genericclothes.py  0002_genericclothes_image_url_alter_genericclothes_photo.py  0003_genericclothes_image.py
weather_app/static/weather_app/: style.css
weather_app/templates/registration/: login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
weather_app/templates/weather_app/: add_item.html  base_template.html  delete_item.html  footer.html  genericclothes_list.html  index.html  recommendation.html
weather_app/templatetags/: inventory_extras.py
